Added Order sections and profile update fixes