@@ -2,7 +2,7 @@ package com.plantnest.service;
 
 import com.plantnest.model.User;
 import com.plantnest.repository.UserRepository;
-import com.plantnest.dto.RegistrationRequest; // Import the DTO
+import com.plantnest.dto.RegistrationRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -22,23 +22,27 @@ public class UserService {
         this.passwordEncoder = passwordEncoder;
     }
 
+    /**
+     * General-purpose save method, encoding password only if it's a new user or password is provided.
+     */
     @Transactional
     public User save(User user) {
-        // This method is for general user saving/updating.
-        // For new user registration, use registerNewUser to ensure password encoding.
         if (user.getId() == null || (user.getPassword() != null && !user.getPassword().trim().isEmpty())) {
             user.setPassword(passwordEncoder.encode(user.getPassword()));
         }
         return userRepository.save(user);
     }
+
+    /**
+     * Handles new user registration from a registration form.
+     */
     @Transactional
     public User registerNewUser(RegistrationRequest request) {
         User user = new User();
-        user.setUsername(request.getUsername()); 
+        user.setUsername(request.getUsername());
         user.setEmail(request.getEmail());
-        user.setPassword(passwordEncoder.encode(request.getPassword())); 
-        user.setRole("USER"); 
-
+        user.setPassword(passwordEncoder.encode(request.getPassword()));
+        user.setRole("USER");
         return userRepository.save(user);
     }
 
@@ -62,28 +66,45 @@ public class UserService {
         return userRepository.existsByUsername(username);
     }
 
+    /**
+     * Updates an existing user with new profile information.
+     * Used primarily by the profile update form.
+     */
     @Transactional
     public User saveOrUpdateUser(User updatedUser) {
-        Optional<User> existingUserOptional = userRepository.findById(updatedUser.getId());
+        User existingUser = userRepository.findById(updatedUser.getId())
+            .orElseThrow(() -> new RuntimeException("User with ID " + updatedUser.getId() + " not found."));
 
-        if (existingUserOptional.isPresent()) {
-            User existingUser = existingUserOptional.get();
+        existingUser.setFirstName(updatedUser.getFirstName());
+        existingUser.setLastName(updatedUser.getLastName());
+        existingUser.setEmail(updatedUser.getEmail());
+        existingUser.setPhoneNumber(updatedUser.getPhoneNumber());
+        existingUser.setAddress(updatedUser.getAddress());
+        existingUser.setUsername(updatedUser.getUsername());
 
-            // Update fields from updatedUser
-            existingUser.setFirstName(updatedUser.getFirstName());
-            existingUser.setLastName(updatedUser.getLastName());
-            existingUser.setEmail(updatedUser.getEmail());
-            existingUser.setPhoneNumber(updatedUser.getPhoneNumber());
-            existingUser.setAddress(updatedUser.getAddress());
-            existingUser.setUsername(updatedUser.getUsername());
-
-            if (updatedUser.getPassword() != null && !updatedUser.getPassword().trim().isEmpty()) {
-                existingUser.setPassword(passwordEncoder.encode(updatedUser.getPassword()));
-            }
-
-            return userRepository.save(existingUser);
-        } else {
-            throw new RuntimeException("User with ID " + updatedUser.getId() + " not found for update.");
+        if (updatedUser.getPassword() != null && !updatedUser.getPassword().isBlank()) {
+            existingUser.setPassword(passwordEncoder.encode(updatedUser.getPassword()));
         }
+
+        return userRepository.save(existingUser);
+    }
+
+    /**
+     * A simplified update method, used in older logic. Consider consolidating with saveOrUpdateUser.
+     */
+    @Transactional
+    public void updateUserProfile(User updatedUser) {
+        User existingUser = userRepository.findById(updatedUser.getId())
+            .orElseThrow(() -> new RuntimeException("User with ID " + updatedUser.getId() + " not found."));
+
+        existingUser.setFirstName(updatedUser.getFirstName());
+        existingUser.setLastName(updatedUser.getLastName());
+        existingUser.setEmail(updatedUser.getEmail());
+
+        if (updatedUser.getPassword() != null && !updatedUser.getPassword().isBlank()) {
+            existingUser.setPassword(passwordEncoder.encode(updatedUser.getPassword()));
+        }
+
+        userRepository.save(existingUser);
     }
 }
